syntax = "proto3";
package mantrachain.marketplace.v1;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/LimeChain/mantrachain/x/marketplace/types";
option (gogoproto.equal_all) = true;

message MarketplaceNft {
  bytes index = 1 [(gogoproto.moretags) = "yaml:\"index\""]; 
  bytes marketplace_index = 2 [(gogoproto.moretags) = "yaml:\"marketplace_index\""]; 
  bytes collection_index = 3 [(gogoproto.moretags) = "yaml:\"collection_index\""]; 
  bool for_sale = 4 [(gogoproto.moretags) = "yaml:\"for_sale\""]; 
  bool initially_sold = 5 [(gogoproto.moretags) = "yaml:\"initially_sold\""]; 
  cosmos.base.v1beta1.Coin min_price = 6 [
    (gogoproto.moretags) = "yaml:\"min_price\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin",
    (gogoproto.nullable) = true
  ]; 
  bytes cw20_contract_address = 7 [
    (gogoproto.moretags) = "yaml:\"cw20_contract_address\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"
  ];
  bytes creator = 8 [
      (gogoproto.moretags) = "yaml:\"creator\"",
      (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"
  ];
}
